--- a/style.css
+++ b/style.css
@@ -108,15 +108,14 @@
     background-color: black;
 }
 .back-box .flex{
-    display: flex;
-    flex-direction: column;
-    padding: 18px;
+    padding: 20px;
 }
 .back-box button{
     border: 1px solid rgb(173, 169, 163);
     border-radius: 5px;
-    padding: 13px;
     width: 100%;
+    height: 30px;
+    text-transform: uppercase;
 }
 
 .back-box .img{
@@ -180,8 +179,27 @@
 }
 
 @media screen and (max-width:800px) {
+    /* .card {
+        width: 100%;
+    }
+    .card-mm-yy-cvv select {
+        width: 90px;
+    }
+    .card-mm-yy-cvv input{
+        width: 90px;
+    } */
+     /* .card-back-content {
+        margin-top: 20px;
+    }
+    .card-front-content {
+         margin-top: 20px;
+    }  */
+}
+
+@media screen and (max-width:478px) {
     .card {
         width: 100%;
+        margin-top: 150px;
     }
     .card-mm-yy-cvv select {
         width: 90px;
@@ -190,22 +208,14 @@
         width: 90px;
     }
     .card-back-content {
-        margin-top: 40px;
-    }
-    .card-front-content {
-         margin-top: 40px;
-    }
-}
-
-@media screen and (max-width:400px) {
-    .card{
-        margin-top: 30px;
-    }
-    .card-back-content {
         margin-top: 25px;
-
     }
     .card-front-content {
          margin-top: 25px;
     }
+}
+
+.MM-YY-flex {
+    display: flex;
+    gap: 8px;
 }
